openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
/* ... */
.editResourceViewContainer, #assignmentHolder {
  #resetPasswordBtn {
    margin-right: 5px;
  }

  .unEditable {
    cursor: default;
  }
  .resourceEditLink {
    color: @base-theme-color !important;
  }
}

.tab-content.tab-content-transparent {
  background-color:transparent;
}

/*
  Password Change
*/
#mandatoryPasswordChangeDialog .well {
  margin-left:45px;
}

.iconpicker .iconpicker-item {
  margin-right:10px;
}

/*
  Inline JSONEditor styles

  This should be used for when you need multiple JSONEditors in a row. For example script widget variables.
*/
.list-table .list-group {
  .compactJSON,
  .compactJSON div {
    display: inline;
  }

  .compactJSON {
    div[data-schemapath="root"]>label {
      display: none !important;
    }

    div[data-schemapath] {
      margin-left: 5px;
    }

    .form-control {
      display: inline;
      width: auto;
    }

    select {
      height: 35px !important;
    }

    .btn-group {
      float: right;
    }

    .well {
      background-color: transparent;
    }

    h3 {
      span {
        display: none;
      }
    }

    div[data-schematype="object"]>h3 {
      display: inline;
      margin: 0;
    }

    div[data-schematype="object"]>h3>div>div {
      top: 40px !important;
    }

    div[data-schematype="object"] {
      div.checkbox {
        display: block;
      }
    }

    div[data-schematype="object"]>div,
    div[data-schematype="array"]>div {
      border: none !important;
    }

    div[data-schematype="object"]>div>div,
    div[data-schematype="array"]>div>div>div {
      display: block;
    }

    div[data-schemapath="root"]>select {
      margin-bottom: 5px !important;
    }
  }
}

.backgrid td.checkMarkCell {
  padding-left:30px;
}

.margin-top-5 {
    margin-top: 5px;
}

.margin-top-10 {
    margin-top: 10px;
}

.overflow-visible {
    overflow: visible !important;
}

.gray-background {
    background-color: #f7f7f7;
}

.api-explorer-iframe {
    position:fixed;
    width:100%;
    border:none;
    height:75%;
}

@media (max-width: 767px) {
  .blockButton {
    margin-top: 15px;
    width: 100%;
  }

  .btn-toolbar {

    .pull-right {
      float: none !important;
    }

    .btn-group {
      width: 100%;

      button {
        display: block;
        margin-top: 10px;
        width: 100%;
      }
    }

    .btn-group:first-child button{
      margin-top: 0;
    }
  }

  .addScriptButton {
    margin-top: 15px;
    width: 100%;
  }
  .list-table {
    .list-group {
      .list-group-item {
        border-top: none;
        background-color: transparent;
        -webkit-transition: background-color 0.1s linear;
        -moz-transition: background-color 0.1s linear;
        -o-transition: background-color 0.1s linear;
        transition: background-color 0.1s linear;
        padding: 12px 15px;
      }
    }
  }
}

@media (min-width: 992px) {
  .list-table {
    .list-group {
      .list-group-header, .list-group-item {
        padding-top: 15px;
      }

      .list-group-item {
        .list-table-label {
          display: none;
        }
        .tag {
          margin-bottom: 0px;
        }
      }
    }
  }
  .list-table-badges {
    float: right;
  }
}

